# voxel-lab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  USAGE.md  full_dir_repo_to_text.toml  imgui.ini
resources/: menus.txt
scripts/: build.ps1  build.sh  test.ps1  test.sh
shaders/: cube.frag  cube.vert
src/: app.cpp  app.hpp  camera.cpp  camera.hpp  commands.cpp  commands.hpp  input.cpp  input.hpp  main.cpp  menu.cpp  menu.hpp  renderer.cpp  renderer.hpp  selection.cpp  selection.hpp  universe.cpp  universe.hpp  util.hpp
tests/: test_commands.cpp  test_universe.cpp
